# python-air

./: .gitignore  LICENSE  Makefile  README.md  air.py  example.py  pyproject.toml  requirements.txt  setup.py
snifflogic_air/: __init__.py
snifflogic_air/snifflogic_air.egg-info/: PKG-INFO  SOURCES.txt
src/snifflogic_air/: __init__.py
